--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -24,7 +24,6 @@ html,
 body,
 #root {
   text-align: center;
-  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
